# Smart-Safety-Care_APK

./: .gitignore  README.md  Refining Monitor UI.md  capacitor.config.json  files.txt  index.html  package-lock.json  package.json  sw.js  vite.config.ts  ▶️啟動_SmartCare.bat  🛑關閉_SmartCare.bat
YOLOv8/: danger_engine.py
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: capacitor.config.json
android/app/src/main/assets/public/: index.html
android/app/src/main/cpp/: CMakeLists.txt  yolov8_ncnn.cpp
android/app/src/main/java/com/smartsafety/app/: BoundingBoxView.java  MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
assets/: index--p21y_b4.js  index-BDAmmotU.js  index-BOx8ddYz.js  index-BV78gorX.js  index-BkleLEwi.css  index-BmSnO6UK.css  index-Bon3B7Ct.js  index-BueryiV1.js  index-Bwg7G8TS.js  index-Bxa_JCcX.js  index-CbiMMD1_.css  index-CrneeTIH.css  index-D3DjhqLG.css  index-D8erCpak.js  index-DJHgg9C-.js  index-DdtoQ-QW.css  index-Dpmjo-0h.js  index-Dubyiqfr.js  index-YlugAV5i.css  index-fam2syF1.js  index-nSbP5KgH.js
src/app/: App.tsx
src/app/components/: CareTab.tsx  HealthTab.tsx  MonitorTab.tsx  SettingsTab.tsx
src/imports/: smartguard-app-design.md
video/: app.py  stream_server.py  test_tflite.py
